[tool]
name = "cc-simulator"
version = "0.1.0"
description = "A 2D call center simulation model."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
black = "^21.7b0"

[tool.poetry.scripts]
serve = "scripts.serve:main"