[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-simulator"
version = "0.1.0"
description = "Simple call center simulation with a Flask API and minimal web UI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
	"Flask>=2.3",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
cc-sim-serve = "cc_simulator.app:main"

[project.optional-dependencies]
dev = [
	"pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cc_simulator*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]